[workspace]
resolver = "2"
members = [
    "crates/aether-core",
    "crates/aether-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tehuti01/ether-meter-here-is-peter"
description = "AI-Driven Decentralized Real-Time Physics Engine — φ-governed"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
