[package]
name = "aether-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core rigid-body physics engine — φ-harmonic dynamics solver"

[features]
default = ["std"]
std = []
simd = []
wasm = ["std"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
